--- a/internal-web-page/package.json
+++ b/internal-web-page/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "misl-lab-internel-site",
+  "name": "4-learn-nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,7 +11,6 @@
   "dependencies": {
     "@blueprintjs/core": "^4.5.0",
     "@blueprintjs/table": "^4.3.0",
-    "forever": "4.0.3",
     "next": "12.1.6",
     "react": "^18.1.0",
     "react-dom": "18.1.0",
@@ -21,8 +20,6 @@
     "@types/node": "17.0.42",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
-    "babel-plugin-macros": "^3.1.0",
-    "babel-plugin-preval": "^5.1.0",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "typescript": "4.7.3"
