--- a/role_apt/tasks/main.yml
+++ b/role_apt/tasks/main.yml
@@ -48,6 +48,7 @@
       - python3.9
       - python3.9-dev
       - python3.9-distutils
+      - python3.9-venv
     state: present
   retries: 3
   delay: 5
